<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_quit"
        android:title="@string/menu_quit"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_res_ok"
        android:title="@string/menu_res_ok"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_res_normal"
        android:title="@string/menu_res_normal"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menu_res_error"
        android:title="@string/menu_res_error"
        app:showAsAction="never" />
</menu>